clusters/takeout/apps/media/filebrowser/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: filebrowser
  namespace: media
spec:
  serviceName: filebrowser
  replicas: 1 # active nas
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser:v2
        command: # ["sh","-c","tail -f /dev/null"]
        - sh
        - -c
        - |
          apk add mktorrent util-linux unrar && /filebrowser -d /db/database.db
        # util-linux has rename
        volumeMounts:
          - name: filebrowser-config
            mountPath: /db
          # - name: braavos
          #   mountPath: /srv/braavos
          - name: media
            mountPath: /srv/media
          - name: temp
            mountPath: /srv/temp
        resources:
          requests:
            cpu: "50m"
          limits:
            memory: "256Mi"
        ports:
        - containerPort: 80
      volumes:
        - name: filebrowser-config
          persistentVolumeClaim:
            claimName: filebrowser-config-nas
        - name: media
          persistentVolumeClaim:
            claimName: nas-volume1-media
        - name: temp
          persistentVolumeClaim:
            claimName: stash-temp-nas
