clusters/takeout/apps/media/filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: filebrowser
  ports:
    - name: filebrowser
      protocol: TCP
      port: 80
      targetPort: 80
