clusters/takeout/apps/media/filebrowser/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: media
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "40g"
spec:
  tls:
    - hosts:
        - "*.tyzbit.io"
      secretName: tyzbit.io-tls
  rules:
  - host: files.tyzbit.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: filebrowser
            port:
              number: 80
